--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -10,3 +10,6 @@
     - {name: "SeaGroup", description: "SeaGroup", link: "https://www.seagroup.com/", imageUrl: "seagroup.png"}
     - {name: "Traveloka", description: "Traveloka", link: "https://www.traveloka.com/en-id/about-us", imageUrl: "traveloka.png"}
     - {name: "SP Digital", description: "SP Digital", link: "https://www.spdigital.io", imageUrl: "spdigital.svg"}
+- group: "Coffee ☕️"
+  elements:
+    - {name: "GovTech", description: "GovTech", link: "https://www.tech.gov.sg", imageUrl: "govtech.jpg"}
